2003-11-18  Paolo Bonzini  <bonzini@gnu.org>
	    Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/ylwrap: Do not overwrite headers if they haven't changed.
	Fix the include guard substitution.
	* tests/yacc6.test: Augment to run ylwrap, and make sure it
	does not needlessly update headers.
	* tests/yacc8.test: Make sure headers are not needlessly updated
	with ylwrap is not used.  Move `test -f foo.o' into the
	Makefile as `test -f foo.$(OBJEXT)' for portability.

2003-11-17  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (generate_makefile): Define SUBDIRS if it is
	not defined and DIST_SUBDIRS is.
	* tests/subpkg2.test: New file.
	* tests/Makefile.am (TESTS): Add subpkg2.test.
	Report from Gary V. Vaughan.

	* tests/suffix11.test: Check for suffixes containing `-'.
	* lib/Automake/Rule.pm ($_SUFFIX_RULE_PATTERN): Accept `-' in
	suffixes.

	* lib/Automake/Rule.pm (define): Suggest using target-local instead
	of target-am, not target-am-local.
	* tests/overrid.test: Check the diagnostic for clean-am.
	Report from Bruno Haible.

2003-11-17  Jim Meyering  <jim@meyering.net>

	* bootstrap: Require not only that `perl' have the executable
	bit set, but also that it is not a directory.

	* lib/am/configure.am: Mark %MAKEFILE% as `.PRECIOUS'.

2003-11-17  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (ac_config_files_location): Declare as a hash.
	(handle_configure): Rewrite the computation of AC_CONFIG_FILES
	dependencies; make sure we don't use $(srcdir) or $(top_srcdir)
	for inputs which are also outputs, and do not check inputs
	relatively to the current directory.
	(scan_autoconf_config_files): Take $where as argument, and
	fill $ac_config_files_location.
	* tests/output8.test, tests/output9.test: New files.
	* tests/Makefile.am (TESTS): Add output8.test and output9.test.
	Report from Bruno Haible.

2003-11-14  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/aclibobj.test, tests/aclocal.test, tests/aclocal3.test,