@@ -110,6 +110,7 @@ if %?LOCAL-TEXIS%
 am__installdirs += $(DESTDIR)$(infodir)
 install-data-am: install-info-am
 endif %?LOCAL-TEXIS%
+endif %?INSTALL-INFO%
 .PHONY: install-info
 if %?SUBDIRS%
 RECURSIVE_TARGETS += install-info-recursive
@@ -117,7 +118,6 @@ install-info: install-info-recursive
 else !%?SUBDIRS%
 install-info: install-info-am
 endif !%?SUBDIRS%
-endif %?INSTALL-INFO%
 
 .PHONY: install-info-am
 if %?LOCAL-TEXIS%
