@@ -484,6 +484,7 @@ txinfo23.test \
 txinfo24.test \
 txinfo25.test \
 txinfo26.test \
+txinfo27.test \
 transform.test \
 unused.test \
 vars.test \
