@@ -1,3 +1,11 @@
+2003-11-18  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>  (tiny change)
+	    Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/am/texinfos.am (install-info): Depend on
+	install-info-recursive or install-info-am even if no-installinfo.
+	* tests/txinfo27.test: New file.
+	* tests/Makefile.am (TESTS): Add txinfo26.test.
+
 2003-11-18  Paolo Bonzini  <bonzini@gnu.org>
 	    Alexandre Duret-Lutz  <adl@gnu.org>
 
